# Modelo-Preditivo-de-Precos-de-Livros-e-Visualizacoes

./: README.md  app.py  pyproject.toml  visualizacao.ipynb
